<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbike"
    tools:context=".SignIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#ba2d65"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:id="@+id/login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:hint="@string/email"
        android:textColor="@color/editTextSignIn"
        android:id="@+id/email"
        android:layout_marginTop="10sp"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/editTextSignIn"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/SignIn"
        android:textColor="@android:color/white"
        android:layout_marginTop="10sp"
        android:background="#ba2d65"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:id="@+id/signIn"
        />


</RelativeLayout>