<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgbike"
    tools:context=".Regiteration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registration"
        android:textColor="#00796b"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:id="@+id/login"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:hint="@string/name"
        android:textColorHint="@android:color/black"
        android:textColor="@color/editTextRegistration"
        android:id="@+id/name"
        android:layout_marginTop="10sp"
        android:inputType="textPersonName"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:maxLength="20"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:hint="@string/email"
        android:textColor="@color/editTextRegistration"
        android:textColorHint="@android:color/black"
        android:id="@+id/email"
        android:layout_marginTop="10sp"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:maxLength="20"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:hint="@string/password"
        android:textColorHint="@android:color/black"
        android:inputType="textPassword"
        android:textColor="@color/editTextRegistration"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:maxLength="8"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cpassword"
        android:layout_below="@+id/password"
        android:hint="@string/cpassword"
        android:textColorHint="@android:color/black"
        android:inputType="textPassword"
        android:textColor="@color/editTextRegistration"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:maxLength="8"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:layout_below="@+id/cpassword"
        android:hint="@string/phone"
        android:textColorHint="@android:color/black"
        android:inputType="number"
        android:textColor="@color/editTextRegistration"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:maxLength="11"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:text="@string/Registration"
        android:textColor="@android:color/white"
        android:layout_marginTop="10sp"
        android:background="#00796b"
        android:id="@+id/registration"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        />
</RelativeLayout>